[tool.poetry]
name = "priority_flow"
version = "1.0.0"
description = "Python toolkit for topographic processing for hydrologic models - a port of the R PriorityFlow package"
authors = ["Laura E. Condon and Reed M. Maxwell"]
license = "GNU General Public License v3.0"
readme = "README.md"
homepage = "https://github.com/lecondon/PriorityFlow"
repository = "https://github.com/lecondon/PriorityFlow"
keywords = ["hydrology", "topography", "DEM", "flow", "watershed", "priority-flood"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "priority_flow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=2.3.2"
scipy = ">=1.16.0"
pandas = ">=2.3.1"
matplotlib = ">=3.10.5"
rasterio = ">=1.4.3"
scikit-image = ">=0.25.2"
pftools = ">=1.3.14"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.1"
pytest-cov = ">=6.2.1"
black = ">=25.1.0"
flake8 = ">=7.3.0"
mypy = ">=1.17.1"
pre-commit = ">=4.3.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=8.2.3"
sphinx-rtd-theme = ">=3.0.2"
myst-parser = ">=4.0.1"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=priority_flow --cov-report=html --cov-report=term-missing"
